--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,37 +1,256 @@
 :root{
     --color: #e8603c;
   }
-@media (max-width: 1280px){
-    nav{
-        display: block;
+@media (max-width: 1180px){
+    .container{
+        max-width: 800px;
+    }
+    
+    .slider_big {
+        height: 355px;
+    }
 
+    .blok_with_works .bloks{
+        flex-wrap: wrap;
+        row-gap: 25px;
     }
-    .burger_menu{
-        display: block;
-        
+
+    .blok_with_works .bloks .blok{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
     }
+
+    .blok_with_works .bloks .blok .text{
+        width: 219px;
+    }
+}
+
+
+
+@media (max-width: 980px){
+    header {
+        text-transform: uppercase;
+        position: fixed;
+        z-index: 2;
+        background-color: white;
+        width: 100%;
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    .menu{
+        display: none;
+    }
+
+    .sliders,
+    .info_bloks,
+    .blok_with_works,
+    footer{
+        position: relative;
+        top: 105px;
+    }
+
+    .slider_big {
+        height: 355px;
+    }
+
+   
+
+
+.burger_menu{
+    display: block;
     
-    nav li{
-        display: block;
-        text-align: center;
-        border-top: none;
-        height: 40px;
+}
+
+nav li{
+    display: block;
+    text-align: center;
+    border-top: none;
+    height: 40px;
+}
+
+nav ul{
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    background-color: rgb(249, 253, 7);
+}
+
+nav a{
+    display: block;
+}
+
+nav li a:hover{
+    border-top: none;
+}
+}
+
+@media (max-width: 780px){
+    .container{
+        width: 95%; 
     }
-    
-    nav ul{
+    .slick-arrow img{
+        height: 30px;
+    }
+    .slider_big .slider_textblok{
+        padding: 16px 20px;
+    }
+    .slider_little .slick-track div + div{
+        padding-left: 17px;
+    }
+    .slider_little .slider_item {
+        position: relative;
+        height: 100px;
+        width: 120px;
+        box-sizing: border-box;
+    }
+
+    .slider_little .slider_item img{
         position: absolute;
-        top: 80px;
+        width: 90%;
+        height: 100%;
+    }
+    
+    .info_item_title {
+        font-size: 14px;
+    }
+    .info_item_text{
+        padding-top: 25px;  
+    }
+    .container.footer{
+        column-gap: 20px;
+    }
+}
+
+@media (max-width: 680px){
+    .slider_big{
+       height: 305px; 
+    }
+
+    .items_container{
+        flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 20px;
+    }
+
+    .info_item{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid rgb(219, 219, 219);
+    }
+    .info_item_title{
+        padding-top: 10px;
+    }
+    .info_item_text  {
+        padding: 20px 15px;
+    }
+    .info_item_link{
+        margin-bottom: 10px;
+    }
+
+}
+
+@media (max-width: 580px){
+    .slider_big{
+       height: 290px; 
+    }
+    .slider_big .slider_textblok{
+        width: 275px;
+        padding: 10px;
+    }
+    .slider_big .slider_textblok .slider_title{
+        padding-bottom: 10px;
+        font-size: 16px;
+    }
+    .slider_big .slider_textblok .slider_text{
+        font-size: 10px;
+    }
+    .slick-arrow img{
+        height: 20px;
+    }
+    .slider_little .slider_item{
+        height: 85px;
+    }
+}
+
+@media (max-width: 490px){
+    .slider_big {
+        height: 228px;
+    }
+    .slider_little .slider_item{
+        height: 115px;
+    }
+    .info_item{
+        width: 98%;
+    }
+    .bloks .blok img{
+        max-height: 140px;
+    }
+    .blok_with_works .bloks .blok .text {
+        width: 167px;
+    }
+    .container.footer{
+        flex-wrap: wrap;
+        row-gap: 40px;
+    }
+    .footer_item_txt{
+        width: auto;
+        padding-top: 20px ;
+    }   
+}
+
+@media (max-width: 400px){
+    .slider_big {
+        height: 180px;
+    }
+    .slick-arrow img {
+        height: 15px;
+    }
+    .slider_big .slider_textblok{
+        bottom: 0;
         left: 0;
         width: 100%;
-        z-index: 2;
-        background-color: rgb(249, 253, 7);
+        padding: 7px;
     }
-
-    nav a{
-        display: block;
+    .slider_big .slider_textblok .slider_text{
+        font-size: 8px;
     }
+    .slider_little .slider_item {
+        height: 100px;
+    }
+    .slider_big .slider_textblok .slider_title {
+        padding-bottom: 6px;
+        font-size: 13px;
+    }
+}   
 
-    nav li a:hover{
-        border-top: none;
+@media (max-width: 380px){
+    .header{
+        height: 60px;
+    }
+    .container,
+    .container_contant{
+        height: 100%;
+    }
+    .header_logo h1{
+        padding: 0;
+    }
+    .blok_with_works .bloks .blok {
+        width: 100%;
+        border: 1px solid rgb(219, 219, 219);
+        position: relative;
+    }
+    .blok .text {
+        border: 1px solid rgb(219, 219, 219);
+        border-left: none;
+        border-right: none;
+        width: 100% !important;
     }
 }
