--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 :root{
     --color: #e8603c;
   }
@@ -11,16 +18,26 @@
     }
 
     .blok_with_works .bloks{
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         row-gap: 25px;
     }
 
     .blok_with_works .bloks .blok{
         width: 50%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         position: relative;
     }
 
@@ -38,7 +55,8 @@
         z-index: 2;
         background-color: white;
         width: 100%;
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+                box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
     .menu{
         display: none;
@@ -106,7 +124,8 @@ nav li a:hover{
         position: relative;
         height: 100px;
         width: 120px;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
     }
 
     .slider_little .slider_item img{
@@ -122,7 +141,9 @@ nav li a:hover{
         padding-top: 25px;  
     }
     .container.footer{
-        column-gap: 20px;
+        -webkit-column-gap: 20px;
+           -moz-column-gap: 20px;
+                column-gap: 20px;
     }
 }
 
@@ -132,17 +153,29 @@ nav li a:hover{
     }
 
     .items_container{
-        flex-wrap: wrap;
-        justify-content: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         row-gap: 20px;
     }
 
     .info_item{
         width: 80%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         border: 1px solid rgb(219, 219, 219);
     }
     .info_item_title{
@@ -197,7 +230,8 @@ nav li a:hover{
         width: 167px;
     }
     .container.footer{
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         row-gap: 40px;
     }
     .footer_item_txt{
