--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 @font-face {
   font-family: 'Bebas';
   src: url(../fonts/Bebas-Regular.ttf);
@@ -305,7 +298,7 @@ nav li a:hover{
 }
 
 .item_icon{
-  padding-right: 20px;
+  padding: 0 20px;
 }
 
 .info_item_text{
