--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -11,8 +11,8 @@
     }
 
     .blok_with_works .bloks{
-        flex-wrap: wrap;
-        row-gap: 25px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 25px;
     }
 
     .blok_with_works .bloks .blok{
@@ -51,17 +51,42 @@
         position: relative;
         top: 105px;
     }
+    .info_bloks{
+        margin-top: 20px;
+    }
 
     .slider_big {
         height: 355px;
     }
 
-   
+    .items_container{
+        grid-template-columns: 1fr;
+    
 
+    }
+
+    .info_item{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid rgb(219, 219, 219);
+        padding: 20px;
+    }
+
+    .info_item_text {
+        font-family: 'Helvetica Neue';
+        font-size: 14px;
+        line-height: 24px;
+        padding: 30px 0px ;
+    }
+
+    .slider_little .slider_item {
+        height: 115px;
+    }
 
 .burger_menu{
-    display: block;
-    
+    display: block;   
 }
 
 nav li{
@@ -139,11 +164,6 @@ nav li a:hover{
     }
 
     .info_item{
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         border: 1px solid rgb(219, 219, 219);
     }
     .info_item_title{
@@ -158,7 +178,7 @@ nav li a:hover{
 
 }
 
-@media (max-width: 580px){
+@media (max-width: 620px){
     .slider_big{
        height: 290px; 
     }
@@ -178,6 +198,14 @@ nav li a:hover{
     }
     .slider_little .slider_item{
         height: 85px;
+    }
+    .container.footer{
+        grid-template-columns: 1fr;  
+    }
+    .footer_item_tittle,
+    .footer_item_txt{
+        width: 100%;
+        padding-top: 15px;
     }
 }
 
@@ -206,8 +234,35 @@ nav li a:hover{
         padding-top: 20px ;
     }   
 }
+@media (max-width 415){
+    .sliders,
+    .info_bloks,
+    .blok_with_works,
+    footer{
+        position: relative;
+        top: 95px;
+    }
+}
 
 @media (max-width: 400px){
+    .header{
+        height: 60px;
+    }
+    .sliders,
+    .info_bloks,
+    .blok_with_works,
+    footer{
+        position: relative;
+        top: 68px;
+    }
+}
+    .container,
+    .container_contant{
+        height: 100%;
+    }
+    .header_logo h1{
+        padding: 0;
+    }
     .slider_big {
         height: 160px;
     }
@@ -230,18 +285,9 @@ nav li a:hover{
         padding-bottom: 6px;
         font-size: 13px;
     }
-}   
-
-@media (max-width: 380px){
-    .header{
-        height: 60px;
-    }
-    .container,
-    .container_contant{
-        height: 100%;
-    }
-    .header_logo h1{
-        padding: 0;
+    .blok_with_works .bloks {
+        grid-template-columns: 1fr;
+        grid-gap: 25px;
     }
     .blok_with_works .bloks .blok {
         width: 100%;
@@ -257,4 +303,5 @@ nav li a:hover{
     .slider_little .slider_item {
         height: 85px;
     }
-}
+}   
+
