--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -41,7 +41,12 @@
         box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
     .menu{
-        display: none;
+       display: none ;  
+    }
+
+    .title_page{
+        position: relative;
+        top: 100px;
     }
 
     .sliders,
@@ -84,7 +89,7 @@
     }
 
 .burger_menu{
-    display: inline-block;   
+    display: inline-block !important;   
 }
 
 nav li{
@@ -95,7 +100,8 @@ nav li{
 }
 
 nav ul{
-    position: absolute;
+    flex-direction: column;
+    position: fixed;
     top: 88px;
     left: 0;
     width: 100%;
@@ -107,8 +113,8 @@ nav a{
     display: block;
 }
 
-nav li a:hover{
-    border-top: none;
+header .container_contant .menu ul li a:hover{
+    border-top: none ;
     height: auto;
     background-color: transparent;
 }
@@ -139,17 +145,18 @@ nav li a:hover{
     background-color: rgb(236, 234, 234);
 }
 
-
-.menu_link.drop_down:hover > a{
-    border-top: none;
-    background-color: rgb(236, 234, 234);
-}
-
 .menu_link.drop_down{
     position: relative;
 }
 
-
+header .container_contant .menu ul .menu_link.drop_down .drop_down_list{
+    position: relative;
+    top: 0;
+}
+header .container_contant .menu ul .menu_link.drop_down > a::after{
+    top: 19px;
+    right: 23px;
+}
 }
 
 @media (max-width: 780px){
@@ -213,7 +220,9 @@ nav li a:hover{
     .info_item_link{
         margin-bottom: 10px;
     }
-
+    footer .container.footer{
+        grid-template-columns: 1fr;
+    }
 }
 
 @media (max-width: 620px){
@@ -247,7 +256,7 @@ nav li a:hover{
     }
 }
 
-@media (max-width: 490px){
+@media (max-width: 520px){
     .slider_big {
         height: 228px;
     }
@@ -257,7 +266,7 @@ nav li a:hover{
     .info_item{
         width: 98%;
     }
-    .bloks .blok img{
+    .blok_with_works .bloks .blok img{
         max-height: 140px;
     }
     .blok_with_works .bloks .blok .text {
@@ -292,6 +301,10 @@ nav li a:hover{
     footer{
         position: relative;
         top: 68px;
+    }
+    .title_page{
+        position: relative;
+        top: 70px;
     }
     nav ul{
         top: 60px;
